--- a/style/style.css
+++ b/style/style.css
@@ -1,19 +1,21 @@
 :root {
     --primary-color: #0597F2;
-    --secondary-color: rgb(12,177,242);
+    --secondary-color: #0CB1F2;
     --third-color: #0420BF;
     --fourth-color:#8C7F68;
     --fifth-color: rgb(217, 217, 217);
     --fifth-color-opacity01: rgba(217, 217, 217, 0.1);
+    
 }
 
 body {
     margin: 0;
     background-color: var(--fifth-color-opacity01);
+    min-height: 150vh;
 }
 
 .headerContainer {
-    height: 120px;
+    height: 30px;
     background-color: var(--primary-color);
 }
 
@@ -22,59 +24,96 @@ body {
     justify-content: center;
     align-items: center;
     margin: 48px 0 0 0;
-    flex-wrap: wrap;
 }
 
 .recommendedFood {
-    position: relative;
     display: flex;
     flex-direction: column;
-    width: 500px;
-    height: 300px;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 250px;
     border-radius: 12px;
     background-color: var(--fifth-color);
-    margin: 8px;
+    
 }
 
 .recommendedFood span {
     text-align: center;
 }
 
-.recommendedTitle {
-    font-weight: 900;
-    font-size: 22px;
-    margin-top: 10px;
-}
-
 .recommendedSign {
-    position: absolute;
-    top: 5px;
-    left: 65px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 12px;
-    padding: 8px 12px;
+    width: 120px;
+    height: 44px;
+    border-radius: 25px;
     color: white;
-    background-color: var(--secondary-color);
-    z-index: 1;
-    font-size: 20px;
-}
-
-.recommendedSign:hover {
-    cursor: pointer;
-    opacity: 0.7;
+    background: rgba(0, 157, 255, 0.503);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(7px);
+    
+    
+    
 }
 
 .recommendedImg {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: absolute;
-    top: 35px;
-    width: 500px;
+    width: 400px;
     height: 200px;
+    object-fit: cover;
+    position: absolute;
+    
+}
+
+.recommendedTitle {
+font-weight: 700;
+
+
+}
+
+.recommendedTextContainer {
+    margin-top: 80px;
+    background: rgba(255, 255, 255, 0.61);
+    border-radius: 10px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 12px;
+    padding-right: 12px;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(7px);
+
+}
+
+
+
+
+.recommendedFoodBackground {
+    background-image: url(https://source.unsplash.com/D-vDQMTfAAU);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 250px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    border-radius: 12px;
+    box-sizing: border-box;
+    padding-left: 30px;
+    padding-right: 30px;
+
+
+}
+
+
+
+
+
+.recommendedSign:hover {
+    cursor: pointer;
+    opacity: 0.8;
 }
 
 .foodPicture {
@@ -95,5 +134,47 @@ body {
 
 .recommendedArrow:hover {
     cursor: pointer;
-    opacity: 0.7;
+    opacity: 0.8;
+}
+
+
+.MyFridgeContainer {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 48px 0 0 0;
+
+}
+
+
+.MyFridge {
+    height: 100px;
+    width: 600px;
+    background: var(--fifth-color);
+    border-radius: 18px;
+    padding: 20px;
+    
+
+}
+
+
+.Ingredient {
+    background: rgb(255, 255, 255);
+    border-radius: 18px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    display: inline-block;
+    margin: 5px;
+
+
+
+}
+
+.editIcon {
+
+
+    
 }
