--- a/style/style.css
+++ b/style/style.css
@@ -174,7 +174,12 @@ font-weight: 700;
 }
 
 .editIcon {
-
+    width: 12px;
+    height: 12px;
+    background-color: #0420BF;
+    display: inline-block;
+    margin-left: 5px;
+    margin-right: 2px;
 
     
 }
